--- a/F5.html
+++ b/F5.html
@@ -10,27 +10,9 @@
     <h3>Enter the max number for the fibonacci sequence.</h3>
 
     <input type="number" name="num" id="Input" required><br><br>
-    <button type="submit" id="btnEnter" >Enter</button>
+    <button type="submit" id="btnEnter" onclick="calculate()" >Enter</button>
 
     <script src="F5.js"></script>
 
 </body>
 </html>
-<script>
-    $(function() {
-        $('#btnEnter').on('submit', function(e) {
-            e.preventDefault();
-
-            let $error = $('#error');
-
-            $.ajax({
-                type: 'POST',
-                url: 'F5.php',
-                data: $(this).serialize()
-            }).then(function(res) {
-                let data = JSON.parse(res);
-                
-            })
-        });
-    });
-</script>
